# hw1_paoo

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  hw1_paoo
src/: main.cpp
src/Person/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Person.cpp  Person.hpp  cmake_install.cmake
src/Student/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Student.cpp  Student.hpp  cmake_install.cmake
